--- a/PreVsPostAnalysis.Rmd
+++ b/PreVsPostAnalysis.Rmd
@@ -22,8 +22,8 @@ library(lubridate)
 library(tidyverse)
 library(ggridges)
 
-run.date <- "2018-09-24"
-run.date2 <- "2018-09-24"
+run.date <- "2019-12-17"
+run.date2 <- "2019-12-17"
 
 # internet <- F #TRUE
 # save.figure <- T
@@ -47,8 +47,8 @@ tagproj <- proj4string(tagprj)
 Load results from HR_analysis_GPS_LC_newtags_11July2018.Rmd. The following files contain raw data for pre and post periods.
 
 ```{r}
-post.all <- read.csv("data/Post_GPS_LC_all_2018-09-18.csv")
-pre.all <- read.csv("data/Pre_GPS_LC_all_2018-09-18.csv")
+post.all <- read.csv("data/post_GPS_all.csv")
+pre.all <- read.csv("data/pre_GPS_all.csv")
 
 pre.kd <- HR.analysis.step1(min_n, pre.all, tagproj, grid = grid)
 post.kd <- HR.analysis.step1(min_n, post.all, tagproj, grid = grid)
@@ -80,13 +80,13 @@ Select all possible combinations of 5 (nrow(ID.pre.min_n) - 1) to 15 (nrow(ID.po
 First, we look at the change in computed areas as a function of sample sizes. 
 
 ```{r echo=FALSE, results="hide"}
-post.summary <- read.csv("data/post_sample_summary_2018-10-31.csv")
+post.summary <- read.csv("data/post_sample_summary.csv")
 ID.post.min_n <- filter(post.summary,
-                       n.relocations > (min_n - 1))
+                        GPS > (min_n - 1))
 
-pre.summary <- read.csv("data/pre_sample_summary_2018-10-31.csv")
+pre.summary <- read.csv("data/pre_sample_summary.csv")
 ID.pre.min_n <- filter(pre.summary,
-                       n.relocations > (min_n - 1))
+                       GPS > (min_n - 1))
 
 #h.multiplier <-  seq(from = 0.1, to = 0.95, by = 0.05) 
 # This loop takes a long time... It was run once already so start from 
@@ -95,6 +95,7 @@ ID.pre.min_n <- filter(pre.summary,
 
 # select randomized results 
 file.names <- list.files(path = "RData/", pattern = "areas_combos_n")
+file.names <- file.names[!is.na(str_match(file.names, "2019-12-17"))]
 
 # initialize empty lists for collecting info
 area50.list <- area95.list <- vector(mode = "list", length = length(file.names))
@@ -103,48 +104,49 @@ dif.50.list <- dif.95.list <- vector(mode = "list", length = length(file.names))
 Fn.50.0 <- Fn.95.0 <- vector(mode = "numeric", length = length(file.names))
 
 
+min.k <- 3
 # file.names are not listed from 5 to 15, so results need to be placed in the 
 # right spot 
 for (k in 1:length(file.names)){
   # find the sample size for this file:
   n.txt <- unlist(strsplit(strsplit(strsplit(file.names[k], 
                                              split = "areas_combos_")[[1]][2],
-                                    split = "_2018-")[[1]][1], 
+                                    split = "_2019-12-17")[[1]][1], 
                            split = "n"))[2]
   
   areas.combos <- readRDS(file = paste0("Rdata/", file.names[k]))
   
-  area50.list[[as.numeric(n.txt) - 4]] <- data.frame(area50 = areas.combos$area50,
+  area50.list[[as.numeric(n.txt) - min.k]] <- data.frame(area50 = areas.combos$area50,
                                                      n = as.numeric(n.txt))
-  area95.list[[as.numeric(n.txt) - 4]] <- data.frame(area95 = areas.combos$area95,
+  area95.list[[as.numeric(n.txt) - min.k]] <- data.frame(area95 = areas.combos$area95,
                                                      n = as.numeric(n.txt))
   
-  dif.50.list[[as.numeric(n.txt) - 4]] <- data.frame(dif = areas.combos$area50 - pre.HR$area.50)
-  dif.95.list[[as.numeric(n.txt) - 4]] <- data.frame(dif = areas.combos$area95 - pre.HR$area.95)
+  dif.50.list[[as.numeric(n.txt) - min.k]] <- data.frame(dif = areas.combos$area50 - pre.HR$area.50)
+  dif.95.list[[as.numeric(n.txt) - min.k]] <- data.frame(dif = areas.combos$area95 - pre.HR$area.95)
   
-  p.d50.list[[as.numeric(n.txt) - 4]] <- ggplot(data = dif.50.list[[as.numeric(n.txt) - 4]]) + 
+  p.d50.list[[as.numeric(n.txt) - min.k]] <- ggplot(data = dif.50.list[[as.numeric(n.txt) - min.k]]) + 
     geom_histogram(aes(x = dif), binwidth = 0.1) +
     labs(title = paste0("n = ", n.txt), 
          x = "Difference in area (50% UD)", y = "Count")
   
   # find the ecdf of the differences
-  Fn.50 <- ecdf(dif.50.list[[as.numeric(n.txt) - 4]]$dif)
+  Fn.50 <- ecdf(dif.50.list[[as.numeric(n.txt) - min.k]]$dif)
   
   # compute the probability at 0:
-  Fn.50.0[as.numeric(n.txt) - 4] <- Fn.50(0)
+  Fn.50.0[as.numeric(n.txt) - min.k] <- Fn.50(0)
   
   #plot(hist.dif.50)
   
-  p.d95.list[[as.numeric(n.txt) - 4]] <- ggplot(data = dif.95.list[[as.numeric(n.txt) - 4]]) + 
+  p.d95.list[[as.numeric(n.txt) - min.k]] <- ggplot(data = dif.95.list[[as.numeric(n.txt) - min.k]]) + 
     geom_histogram(aes(x = dif), binwidth = 0.15) +
     labs(title = paste0("n = ", n.txt), 
          x = "Difference in area (95% UD)", y = "Count")
   
   # find the ecdf of the differences
-  Fn.95 <- ecdf(dif.95.list[[as.numeric(n.txt) - 4]]$dif)
+  Fn.95 <- ecdf(dif.95.list[[as.numeric(n.txt) - min.k]]$dif)
   
   # compute the probability at 0:
-  Fn.95.0[as.numeric(n.txt) - 4] <- Fn.95(0)
+  Fn.95.0[as.numeric(n.txt) - min.k] <- Fn.95(0)
   
 }
 
@@ -204,8 +206,8 @@ p.dif.dist <- ggplot() +
   geom_hline(yintercept = post.HR$area.95,
              size = 1.5, color = "blue",
              linetype = 2) + 
-  scale_x_continuous(breaks = c(5:15),
-                     limits = c(4.8,15.2)) +
+  scale_x_continuous(breaks = c(4:12),
+                     limits = c(3.8,12.2)) +
   labs(x = "Number of individuals",
        y = bquote('Estimated UDs (' *km^2*')'))
   
@@ -219,7 +221,7 @@ print(p.dif.dist)
 
 This plot shows that 50% UDs have less variability than 95% UDs. Also, the means of 50% UDs at various sample sizes (the number of individuals) are closer to the 50% UD with all individuals than the means of 95% UDs. So, to make a comparison between the pre and post UDs with different sample sizes, we should use 50% UDs. 
 
-Even at sample sie of 5, the difference between the mean of 1000 UDs and the one from 16 samples was pretty small.
+Even at sample sie of 5, the difference between the mean of 1000 UDs and the one from 13 samples was pretty small.
 ```{r}
 mean.50.n5 <- area50.means[1, "mean.50"]
 dif.50.n5 <- post.HR$area.50 - mean.50.n5$mean.50 
@@ -259,8 +261,8 @@ labs(x = "50% UD", y = "Number of individuals")
 Look at the differences between pre and post periods using 50% UDs.
 
 ```{r}
-# n = 6 is the second list item.
-p.d50.n6 <- ggplot(data = dif.50.list[[2]]) + 
+# n = 6 is the third list item.
+p.d50.n6 <- ggplot(data = dif.50.list[[3]]) + 
     geom_histogram(aes(x = dif), binwidth = 0.1,
                    fill = "gray",
                    col = "black") +
@@ -277,5 +279,5 @@ print(p.d50.n6)
 p.gt0 <- sum(dif.50.list[[2]]$dif > 0)/1000
 ```
 
-So, the majority of the differences are above zero (94.5%), indicating that there was an increase in 50% UDs after the PP shut down. 
+So, the majority of the differences are above zero (97.5%), indicating that there was an increase in 50% UDs after the PP shut down. 
 
